# COVID_19_Emulator

./: CMakeLists.txt  README.md
shaders/: fragmentShader.fs
src/: glad.c
src/core/Hospital/: Hospital.cpp  Hospital.h
src/core/Person/: Person.cpp  Person.h
src/core/data/: data.cpp  data.h
src/core/main/: main.cpp  main.h
src/tool/Maths/: Maths.cpp  Maths.h
src/tool/Random/: Random.cpp  Random.h
src/tool/Shader/: Shader.cpp  Shader.h
src/tool/vector/: vector.cpp  vector.h
sysconfig/: SysConfig.h.in
